--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install -y libicu-dev
+  - ./.build/install-icu4c.sh
 
 sudo: required
 language: go
